# zipper

./: .gitignore  .gitmodules  build.sh  setup.py
src/kernels/zgemm/: gemm_w4a4.cu  gemm_w4a4.cuh  gemm_w4a4_launch.cuh  gemm_w4a4_launch_impl.cuh  kernel.h  spmm_int4.cu
test/: build_test.py  data.json  quant_time_test.py  spmm_time_test.py  test_quant.sh  test_spmm.sh
test_sp/: CMakeLists.txt  spmm_fp16_test.cu  spmm_int4.cu
zipper/csrc/: ops.h  pybind.cpp
zipper/ops/: __init__.py  quantize.py  spmm_compute.py
